@startuml
skinparam classAttributeIconSize 0

' User class hierarchy
class User {
  - userID: int
  - name: String
  - email: String
  - password: String
  + login(): bool
  + logout(): void
}


' Book and Catalog classes
class Book {
  - bookID: int
  - title: String
  - author: String
  - genre: String
  - isAvailable: bool
  + getDetails(): String
}

' Transactions and Notifications
class Transaction {
  - transactionID: int
  - userID: int
  - bookID: int
  - issueDate: Date
  - dueDate: Date
  - returnDate: Date
  + createTransaction(userID: int, bookID: int): void
  + closeTransaction(transactionID: int): void
}


' Relationships and multiplicities
User "1" --> "0..*" Book : borrows
Book "1" --> "0..1" Transaction : belongs to

@enduml
